// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<li>
  <button
    class="option icon"
    style="min-width:10px"
  >
    My option
  </button>
</li>
`;

exports[`The component should render in disabled state 1`] = `
<li>
  <button
    class="option icon"
    disabled=""
    style="min-width:10px"
  >
    My option
  </button>
</li>
`;

exports[`The component should render in selected state 1`] = `
<li>
  <button
    class="option icon selected"
    style="min-width:10px"
  >
    <span
      aria-label="su-check"
      class="su-check icon"
    />
    My option
  </button>
</li>
`;

exports[`The component should render with checkbox 1`] = `
<li>
  <button
    class="option checkbox"
    style="min-width:10px"
  >
    <label
      class="label"
    >
      <span
        class="switch checkbox dark input"
      >
        <input
          type="checkbox"
        />
        <span />
      </span>
    </label>
    My option
  </button>
</li>
`;
